cluster/recipes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: recipes
  labels:
    app: recipes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      containers:
        - name: recipes
          image: docker.io/vabene1111/recipes:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pvc
              subPath: staticfiles
              mountPath: /opt/recipes/staticfiles
            - name: pvc
              subPath: mediafiles
              mountPath: /opt/recipes/mediafiles
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: recipes-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: recipes
spec:
  selector:
    app: recipes
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes
  namespace: recipes
  annotations:
    external-dns.alpha.kubernetes.io/target: werethemille.rs
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - recipes.werethemille.rs
      secretName: recipes-tls
  rules:
    - host: recipes.werethemille.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipes
                port:
                  number: 80
